# seiren

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: lib.yml
example/: posts.seiren  tags.seiren
src/: algorithm.rs  backend.rs  color.rs  erd.rs  error.rs  evcxr.rs  geometry.rs  grid.rs  layout.rs  lib.rs  main.rs  mir.rs  parser.rs  renderer.rs
src/algorithm/: low_link.rs  make_biconnected.rs
tests/: integration_test.rs
