[package]
name = "seiren"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.13.0"
chumsky = "0.8.0"
ariadne = "0.1.5"
derive_builder = "0.12.0"
derive_more = "0.99.17"
thiserror = "1.0.24"

[dev-dependencies]
difference = "2.0"
